; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_easy.c_curl_global_cleanup.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_easy.c_curl_global_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@initialized = common dso_local global i64 0, align 8
@init_flags = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @curl_global_cleanup() #0 {
  %1 = load i64, i64* @initialized, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %14

4:                                                ; preds = %0
  %5 = load i64, i64* @initialized, align 8
  %6 = add nsw i64 %5, -1
  store i64 %6, i64* @initialized, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %4
  br label %14

9:                                                ; preds = %4
  %10 = call i32 (...) @Curl_ssl_cleanup()
  %11 = call i32 (...) @Curl_resolver_global_cleanup()
  %12 = call i32 (...) @Curl_amiga_cleanup()
  %13 = call i32 (...) @Curl_ssh_cleanup()
  store i64 0, i64* @init_flags, align 8
  br label %14

14:                                               ; preds = %9, %8, %3
  ret void
}

declare dso_local i32 @Curl_ssl_cleanup(...) #1

declare dso_local i32 @Curl_resolver_global_cleanup(...) #1

declare dso_local i32 @Curl_amiga_cleanup(...) #1

declare dso_local i32 @Curl_ssh_cleanup(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
